@@ -254,7 +254,8 @@ sub add_defaults {
         'cache options'                     => TRUE,
         cache                               => undef,
         'restore window'                    => TRUE,
-        'set_timestamp'                     => TRUE,
+        set_timestamp                       => TRUE,
+        use_timezone                        => TRUE,
         'date offset'                       => 0,
         'pdf compression'                   => 'auto',
         'tiff compression'                  => undef,
